js/src/tests/test262/built-ins/Error/prototype/message/prop-desc.js
verifyProperty
(
Error
.
prototype
'
message
'
{
enumerable
:
false
writable
:
true
configurable
:
true
value
:
'
'
}
)
;
reportCompare
(
0
0
)
;
